[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/State.gd" type="Script" id=1]
[ext_resource path="res://script/TransitConditions.gd" type="Script" id=2]
[ext_resource path="res://script/StateMachine.gd" type="Script" id=3]

[node name="StateMachine" type="Node"]
script = ExtResource( 3 )

[node name="TransitConditions" type="Node" parent="."]
script = ExtResource( 2 )

[node name="RootState" type="Node" parent="."]
script = ExtResource( 1 )
